WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193404
[BigInt] Literal parsing is crashing when used inside a Object Literal
https://bugs.webkit.org/show_bug.cgi?id=193404
Summary
[BigInt] Literal parsing is crashing when used inside a Object Literal
Caio Lima
Reported
2019-01-14 11:25:30 PST
The current example is now crashing: ``` var x = {y:1n}; ```
Attachments
Patch
(3.19 KB, patch)
2019-01-14 11:43 PST
,
Caio Lima
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Caio Lima
Comment 1
2019-01-14 11:43:49 PST
Created
attachment 359061
[details]
Patch
Yusuke Suzuki
Comment 2
2019-01-14 14:45:44 PST
Comment on
attachment 359061
[details]
Patch r=me, nice.
Caio Lima
Comment 3
2019-01-14 16:13:26 PST
(In reply to Yusuke Suzuki from
comment #2
)
> Comment on
attachment 359061
[details]
> Patch > > r=me, nice.
Thank you very much for the review!
WebKit Commit Bot
Comment 4
2019-01-14 16:39:34 PST
Comment on
attachment 359061
[details]
Patch Clearing flags on attachment: 359061 Committed
r239961
: <
https://trac.webkit.org/changeset/239961
>
WebKit Commit Bot
Comment 5
2019-01-14 16:39:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6
2019-01-14 16:40:31 PST
<
rdar://problem/47270412
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug